// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas a componente <GifExpertApp /> Debe hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas a componente <GifExpertApp /> debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Minecraft"
      key="Minecraft"
    />
    <GifGrid
      category="DOOM"
      key="DOOM"
    />
  </ol>
</Fragment>
`;
